tests/expected_invalid_foreign_generic_fn.diag.out
<input>:2:27: error: foreign functions may not declare generic parameters
    public foreign fn identity<T>(value: Int) -> Int
                              ^
